--- a/real-estate-app-fe/package.json
+++ b/real-estate-app-fe/package.json
@@ -10,6 +10,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.7"
   }
 }
