--- a/real-estate-app-fe/package.json
+++ b/real-estate-app-fe/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tooltip": "^4.2.4",
     "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.7"
   }
