--- a/.github/workflows/master_67acres-webapp.yml
+++ b/.github/workflows/master_67acres-webapp.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -34,7 +34,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
@@ -51,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FEE18ACF27224757BB58AC863A9AC795 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_854930B266CB4D1B8566FFF55C31E34F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6BC4B803308342B8BFAD044E83B8DC78 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3EA1DEF569114C84BCE036FAFC6D3DEF }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_459AD8754F474AF99A24570519EBBDA1 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_35EFE6F0AFA54579A77ED83F9F6F25D2 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
