--- a/.github/workflows/master_67acres-webapp.yml
+++ b/.github/workflows/master_67acres-webapp.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - 67acres-webapp
 
 on:
@@ -23,9 +20,11 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        working-directory: ./RealEstateAPISln/RealEstateAPI # Specify the directory containing the .csproj or .sln file
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        working-directory: ./RealEstateAPISln/RealEstateAPI # Specify the directory containing the .csproj or .sln file
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -40,14 +39,14 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,4 +61,3 @@ jobs:
           app-name: '67acres-webapp'
           slot-name: 'Production'
           package: .
-          
